# HeatMapGenerator

./: README.md
src/: CMakeLists.txt  HeatFuncs.cpp  HeatFuncs.h  HeatMapColourProvider.cpp  HeatMapColourProvider.h  HeatMapGenerator.cpp  ImageGenerator.cpp  ImageGenerator.h  ImageGeneratorThreadController.cpp  ImageGeneratorThreadController.h  ImageGeneratorThreadWorker.cpp  ImageGeneratorThreadWorker.h  ImageOptionsDialog.cpp  ImageOptionsDialog.h  InvertedHeatMapColourProvider.cpp  InvertedHeatMapColourProvider.h  resources.rc  utils.h  wxImagePanel.cpp  wxImagePanel.h  wxPreviewImagePanel.cpp  wxPreviewImagePanel.h
